--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   image_picker: ^0.6.3+1
   path_provider: ^1.6.5
   image_gallery_saver: ^1.2.2
-  permission_handler: ^5.0.0+hotfix.3
+  permission_handler: ^5.0.1+2
   dio: ^3.0.9
   screenshot: ^0.1.1
   signature: ^3.0.0
